# OpenGL-with-CMake-on-Windows-with-VSCode-Template

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/glad/: CMakeLists.txt  glad.h
libs/glfw/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/glad/: glad.c
